# python-habr-career-parser

./: README.md  main.sh  pyproject.toml
habr_career_parser/: args.py  main.py  rss_parser.py  save.py
tests/: test_args.py  test_rss_parser.py
tests/test_data/: rss.xml  rss_empty.xml
