[tool.poetry]
name = "python-habr-career-parser"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.0"
fake-useragent = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
